envoy-phase3-routes/80-routes-esxi.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: esxi11-internal
  namespace: external-services
spec:
  parentRefs:
    - name: main
      namespace: envoy-gateway-system
      sectionName: https-internal-white-fm
  hostnames:
    - esxi11.internal.white.fm
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: esxi11-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: esxi13-internal
  namespace: external-services
spec:
  parentRefs:
    - name: main
      namespace: envoy-gateway-system
      sectionName: https-internal-white-fm
  hostnames:
    - esxi13.internal.white.fm
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: esxi13-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: esxi14-internal
  namespace: external-services
spec:
  parentRefs:
    - name: main
      namespace: envoy-gateway-system
      sectionName: https-internal-white-fm
  hostnames:
    - esxi14.internal.white.fm
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: esxi14-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: esxi15-internal
  namespace: external-services
spec:
  parentRefs:
    - name: main
      namespace: envoy-gateway-system
      sectionName: https-internal-white-fm
  hostnames:
    - esxi15.internal.white.fm
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: esxi15-tls
